display images in gallery

--- a/src/App.css
+++ b/src/App.css
@@ -321,8 +321,9 @@ iframe {
   margin: auto;
 }
 
+.content,
 .admin-content {
-  margin-top: 6rem ;
+  margin-top: 6rem;
 }
 
 /* Responsive Styles */
