--- a/src/App.css
+++ b/src/App.css
@@ -86,7 +86,7 @@ nav {
   padding: 0 15px;
 }
 
-.headingOne-content h1  {
+.headingOne-content h1 {
   font-size: 80px;
   color: white;
 }
@@ -106,7 +106,7 @@ nav {
   padding: 0 15px;
 }
 
- h1 {
+h1 {
   font-size: 60px;
   line-height: 1.2;
   color: #2d4b81;
@@ -227,7 +227,7 @@ iframe {
 
 /* Header Background */
 .header-bg {
-  background: url("./assets/desaSawangan.jpg") no-repeat center center/cover;
+  background: url("/assets/desaSawangan.jpg") no-repeat center center/cover;
   height: 60vh;
   overflow: hidden;
   position: relative;
