--- a/src/App.css
+++ b/src/App.css
@@ -227,7 +227,7 @@ iframe {
 
 /* Header Background */
 .header-bg {
-  background: url("/assets/desaSawangan.jpg") no-repeat center center/cover;
+  background: url("/assets/desaSawangan.jpeg") no-repeat center center/cover;
   height: 60vh;
   overflow: hidden;
   position: relative;
